overflow fixed

--- a/style.css
+++ b/style.css
@@ -39,7 +39,6 @@ i {
   position: relative;
   width: 100%;
   height: 100vh;
-  overflow-x: hidden;
 }
 .left-bg-gradient {
   position: absolute;
@@ -55,6 +54,7 @@ i {
     var(--gradient-violet)
   );
   border-radius: 0 0 50% 50%;
+  clip-path: inset(0 0 0 150px);
 }
 
 .right-bg-gradient {
@@ -67,6 +67,7 @@ i {
   height: 90vh;
   background-color: #f7f5fa;
   border-radius: 50% 50% 0 0;
+  clip-path: inset(0 150px 0 0);
 }
 
 .container {
